Ensure errors are visible on group batch edit.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -248,6 +248,12 @@ img.avatar {
   }
 }
 
+.group.error {
+  td {
+    background-color: #fcc;
+  }
+}
+
 // verses //
 
 .passage {
